--- a/quiz3/countries_3.html
+++ b/quiz3/countries_3.html
@@ -10,6 +10,7 @@
     <link type="text/css" rel="stylesheet" href="../css/fonts.css" />
     <link type="text/css" rel="stylesheet" href="../css/quiz.css" />
     <link type="text/css" rel="stylesheet" href="../css/drag_drop.css" />
+    <link type="text/css" rel="stylesheet" href="../css/share.css" />
 
     <link type="text/css" rel="stylesheet" href="../css/dragdrop_pairs.css" />
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css" />
@@ -54,7 +55,8 @@
                     </ul>
                   </div><!-- col-md-6 -->
                     <div class="col-md-3">
-                      <button type="submit" class="btn btn-primary margin_top_button button_css pull-right">Change Theme</button></div>
+                     <div class="share-button margin_top_share"></div>
+                      <button type="submit" class="btn btn-primary  button_css pull-right margin_top_20">Change Theme</button></div>
         </div><!-- row-fluid -->
 
      <div id="forum"> 
@@ -321,15 +323,22 @@
 <script type="text/javascript" src="../js/hide_video.js"></script>
 <script type="text/javascript" src="../js/angular_section.js"></script>
 <script type="text/javascript" src="../js/toggle_css.js"></script>
+<script type="text/javascript" src="../js/share.js"></script>
 
 
+<script>
+    var share = new Share(".share-button", {
+      networks: {
+        facebook: {
+          app_id: "602752456409826",
+        }
+      }
+    });
+  </script>
 
 
 </body>
 </html>
-
-
-
 
 
 
