--- a/quiz2/cities_2.html
+++ b/quiz2/cities_2.html
@@ -11,6 +11,7 @@
     <link type="text/css" rel="stylesheet" href="../css/drag_drop.css" />
     <link type="text/css" rel="stylesheet" href="../css/note_cities.css" />
     <link type="text/css" rel="stylesheet" href="../css/note_bw.css" />
+        <link type="text/css" rel="stylesheet" href="../css/sticker.css" />
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="../css/adaptive-modal.css" />
     <link type="text/css" rel="stylesheet" href="../css/jquery-ui.structure.min.css" />
@@ -140,9 +141,11 @@
 
                <div id="dragzone_cities" class="col-md-8 dragzone_cities" style="margin-right:-15px;">
 
-                 <div id="welldone_cities" class="col-md-6">
-                  <span class="cities_facts">Well Done!</span><br /><br />
-                  <span class="font_cities_name">Cities in order of population:</span><br />
+                 <div id="welldone_cities" class="col-md-8">
+                  <div class="sticker stickerOne example-1 margin_top_button" ></div>
+                  <!--<span class="solar_facts">Well Done!</span><br /><br />-->
+                  <div class="col-md-8">
+                  <span class="cities_facts">Cities in order of population:</span><br />
                   <span class="font_cities_name"> Tokyo</span> <span class="font_cities_para">34.9 million</span><br />
                   <span class="font_cities_name"> Canton</span> <span class="font_cities_para">32.3 million </span><br />
                   <span class="font_cities_name"> Shanghai</span> <span class="font_cities_para">29.4 million</span><br />
@@ -151,9 +154,7 @@
                   <span class="font_cities_name"> Delhi</span> <span class="font_cities_para">25.1 million </span><br />
                   <span class="font_cities_name"> Mumbai</span> <span class="font_cities_para">22.5 million </span><br />
                   <span class="font_cities_name"> New York</span> <span class="font_cities_para">21.8 million </span>
-
-
-
+                  </div>
                 </div>
 
                   <div id="drag_empty1"></div> 
@@ -218,6 +219,7 @@
 <script type="text/javascript" src="../js/hide_div.js"></script>
 <script type="text/javascript" src="../js/hide_notepad.js"></script>
 <script type="text/javascript" src="../js/toggle_css.js"></script>
+<script type="text/javascript" src="../js/sticker.min.js"></script>
 
 
 
