--- a/quiz2/countries_2.html
+++ b/quiz2/countries_2.html
@@ -11,6 +11,7 @@
     <link type="text/css" rel="stylesheet" href="../css/drag_drop.css" />
     <link type="text/css" rel="stylesheet" href="../css/note_country.css" />
     <link type="text/css" rel="stylesheet" href="../css/note_bw.css" />
+        <link type="text/css" rel="stylesheet" href="../css/sticker.css" />
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="../css/adaptive-modal.css" />
     <link type="text/css" rel="stylesheet" href="../css/jquery-ui.structure.min.css" />
@@ -134,9 +135,11 @@
          
                <div id="dragzone_countries" class="col-md-8 dragzone_countries" style="margin-right:-15px;">
 
-                 <div id="welldone_countries" class="col-md-6">
-                  <span class="country_facts">Well Done!</span><br /><br />
-                  <span class="font_planet_name">Countries in order of most visited:</span><br />
+                 <div id="welldone_countries" class="col-md-8">
+                  <div class="sticker stickerOne example-1 margin_top_button" ></div>
+                  <!--<span class="solar_facts">Well Done!</span><br /><br />-->
+                  <div class="col-md-8">
+                  <span class="country_facts">Countries in order of most visited:</span><br />
                   <span class="font_planet_name"> France</span> <span class="font_planet_para">76.8 million</span><br />
                   <span class="font_planet_name"> United States</span> <span class="font_planet_para">59.7 million</span><br />
                   <span class="font_planet_name"> China</span> <span class="font_planet_para">55.7 million</span><br />
@@ -145,6 +148,7 @@
                   <span class="font_planet_name"> UK</span> <span class="font_planet_para">28.1 million</span><br />
                   <span class="font_planet_name"> Turkey</span> <span class="font_planet_para">27 million</span><br />
                   <span class="font_planet_name"> Germany</span> <span class="font_planet_para">26.9 million</span>
+                 </div>
                 </div>
 
                   <div id="drag_empty1"></div> 
@@ -210,7 +214,7 @@
 <script type="text/javascript" src="../js/hide_div.js"></script>
 <script type="text/javascript" src="../js/hide_notepad.js"></script>
 <script type="text/javascript" src="../js/toggle_css.js"></script>
-
+<script type="text/javascript" src="../js/sticker.min.js"></script>
 
 
 </body>
