--- a/quiz2/space_2.html
+++ b/quiz2/space_2.html
@@ -11,6 +11,7 @@
     <link type="text/css" rel="stylesheet" href="../css/drag_drop.css" />
     <link type="text/css" rel="stylesheet" href="../css/note_space.css" />
     <link type="text/css" rel="stylesheet" href="../css/note_bw.css" />
+    <link type="text/css" rel="stylesheet" href="../css/sticker.css" />
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="../css/adaptive-modal.css" />
     <link type="text/css" rel="stylesheet" href="../css/jquery-ui.structure.min.css" />
@@ -74,6 +75,7 @@
 
 
            <div class="Arial_Rd_Grey_30 margin_top_btm_15">Arrange our Solar System</div>
+           
 
            <div id="bigrow_space" class="bigrow_space">
 
@@ -249,9 +251,12 @@
 
                <div id="dragzone_space" class="col-md-8 dragzone_space" style="margin-right:-15px;">
 
-                <div id="welldone_space" class="col-md-6">
-                  <span class="solar_facts">Well Done!</span><br /><br />
-                  <span class="font_planet_name">The planets' distances in km from the Sun:</span><br />
+                <div id="welldone_space" class="col-md-8">
+
+                  <div class="sticker stickerOne example-1 margin_top_button" ></div>
+                  <!--<span class="solar_facts">Well Done!</span><br /><br />-->
+                  <div class="col-md-8">
+                  <span class="solar_facts" style="float:left;">The Planets' distances in km from the Sun:</span><br />
                   <span class="font_planet_name"> Mercury</span> <span class="font_planet_para">46 million km</span><br />
                   <span class="font_planet_name"> Venus</span> <span class="font_planet_para">107 million km </span><br />
                   <span class="font_planet_name"> Earth</span> <span class="font_planet_para">147 million km </span><br />
@@ -260,9 +265,10 @@
                   <span class="font_planet_name"> Saturn</span> <span class="font_planet_para">1.35 billion km </span><br />
                   <span class="font_planet_name"> Uranus</span> <span class="font_planet_para">2.75 billion km </span><br />
                   <span class="font_planet_name"> Neptune</span> <span class="font_planet_para">4.45 billion km </span>
+                  </div>
                 </div>
 
-                  <div id="drag_empty1"></div> 
+                  <div id="drag_empty1"> </div> 
 
                   <div id="drag_solar1" class="earth"> 
                   <a href="#" onclick="toggle_visibility('earth_text');"><img src="../images/earth.png" alt="earth"> </a></div> 
@@ -322,7 +328,7 @@
 <script type="text/javascript" src="../js/hide_div.js"></script>
 <script type="text/javascript" src="../js/hide_notepad.js"></script>
 <script type="text/javascript" src="../js/toggle_css.js"></script>
-
+<script type="text/javascript" src="../js/sticker.min.js"></script>
 
 
 
