added cards to biology Q2

--- a/quiz2/space_2.html
+++ b/quiz2/space_2.html
@@ -403,7 +403,7 @@
                
               </div>
               <div class="tc_back">
-                <p class="flipcard_text">165 (Earth) years. On 11 July 2011, Neptune made one complete orbit of the sun from the day it was discovered.</p>
+                <p class="flipcard_heading">165 (Earth) years. On 11 July 2011, Neptune made one complete orbit of the sun from the day it was discovered</p>
               </div>
             </div>
           </li>
