padding on Q1 and typos

--- a/quiz2/countries_2.html
+++ b/quiz2/countries_2.html
@@ -184,7 +184,7 @@
                
               </div>
               <div class="tc_back">
-                <p class="flipcard_text">The travel and tourism industry generates nearly $1.3 trillion each yaer and supports 8.2 million jobs.</p>
+                <p class="flipcard_text">The travel and tourism industry generates nearly $1.3 trillion each year and supports 8.2 million jobs.</p>
               </div>
             </div>
           </li>
@@ -216,7 +216,7 @@
                
               </div>
               <div class="tc_back">
-                <p class="flipcard_text">Spain, the second most mountainous country of Europe, is full of and good ski resorts, with famous ski slopes all over Spain.</p>
+                <p class="flipcard_text">Spain, the second most mountainous country of Europe, is full of good ski resorts, with famous ski slopes all over Spain.</p>
               </div>
             </div>
           </li>
