--- a/quiz2/space_2.html
+++ b/quiz2/space_2.html
@@ -335,7 +335,7 @@
 
             <div id="tip4" class="tip">
               <div class="tc_front">
-                <p class="flipcard_heading">Earth and Mars have ...?</p>
+                <p class="flipcard_heading">Earth and Mars both have..?</p>
                
               </div>
               <div class="tc_back">
@@ -403,7 +403,7 @@
                
               </div>
               <div class="tc_back">
-                <p class="flipcard_heading">165 (Earth) years. On 11 July 2011, Neptune made one complete orbit of the sun from the day it was discovered</p>
+                <p class="flipcard_text">165 (Earth) years. On 11 July 2011, Neptune made one complete orbit of the sun from the day it was discovered</p>
               </div>
             </div>
           </li>
