--- a/quiz1/cities_1.html
+++ b/quiz1/cities_1.html
@@ -146,7 +146,7 @@ data-am-custom-bgcolor="#FFCCFF"><button type="button" class="btn btn-large btn-
 
               </div><!-- row-->
 
-               <div id="try" class="try"><a href="quiz1.html">Try Again!</a></div>
+               <div id="try" class="try"><a href="../cities_1.php">Try Again!</a></div>
 
   </div><!-- col-md-4-->
   </div><!-- row-fluid -->
