--- a/quiz1/countries_1.html
+++ b/quiz1/countries_1.html
@@ -166,7 +166,7 @@ data-am-custom-bgcolor="#FFCCFF"><button type="button" class="btn btn-large btn-
 
               </div><!-- row-->
 
-               <div id="try" class="try"><a href="countries_1b.html">Try Again!</a></div>
+               <div id="try" class="try"><a href="../countries_1.php">Try Again!</a></div>
 
   </div><!-- col-md-4-->
   </div><!-- row-fluid -->
