--- a/quiz1/space_1.html
+++ b/quiz1/space_1.html
@@ -152,7 +152,7 @@ data-am-custom-bgcolor="#FFCCFF"><button type="button" class="btn btn-large btn-
 
               </div><!-- row-->
 
-               <div id="try" class="try"><a href="space_1b.html">Try Again!</a></div>
+               <div id="try" class="try"><a href="../index.php">Try Again!</a></div>
 
   </div><!-- col-md-4-->
   </div><!-- row-fluid -->
